--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
-.canvas {
+html, body {
+    width:  100%;
+    height: 100%;
+    margin: 0px;
+}
+
+canvas {
+    /*background: url('./background.jpg');*/
     text-align: center;
-    margin-top: 100px;
-    margin-right: 100px;
     -webkit-animation: fadein 2s;
     -moz-animation: fadein 2s;
     -ms-animation: fadein 2s;
